--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -271,8 +271,31 @@ mark {
   text-align: center;
 }
 
-.logo :global(svg) {
-  max-width: calc(100vw - var(--gap-double));
+header {
+  width: 100%;
+  height: 40px;
+  padding: 8px 16px;
+}
+
+header > a {
+  display: flex;
+  align-items: center;
+}
+
+header > a > .logo {
+  width: 24px;
+  height: 24px;
+  margin-right: 4px;
+}
+
+header > a > h1 {
+  margin: 0;
+  padding: 0;
+  line-height: 24px;
+  height: 24px;
+  font-weight: 700;
+  font-size: 1rem;
+  letter-spacing: -0.5px;
 }
 
 h1 {
@@ -313,7 +336,7 @@ pre :global(code) {
 
 code {
   font-size: 0.8rem;
-  background: #f1f1f1;
+  background: #1e1e1e;
   padding: 0.2rem;
   border-radius: var(--radius);
   font-family: var(--font-mono);
