--- a/src/styles/blog.module.css
+++ b/src/styles/blog.module.css
@@ -74,11 +74,14 @@
 
 .postPreview h3,
 .post h1 {
-  margin-bottom: 0;
+  margin-bottom: 4px;
+  cursor: pointer;
 }
 
 .post h1 {
   margin-top: 0;
+  line-height: 1.5;
+  font-size: 36px;
 }
 
 .post :global(h2),
@@ -101,7 +104,7 @@
 .post {
   max-width: calc(600px + 10%);
   margin: 0 auto;
-  padding: 5%;
+  padding: 16px;
 }
 
 .post :global(hr) {
